--- a/index.html
+++ b/index.html
@@ -893,6 +893,7 @@
             () => {
               btn.value = "Send Message";
               alert("Sent!");
+              this.reset();
             },
             (err) => {
               btn.value = "Send Message";
