--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@
           </div>
 
           <div class="header-buttons">
-            <a href="./img/9+-Years-Exp-UI-Developer.pdf" target="_blank" class="btn btn-primary">Download CV</a>
+            <a
+              href="./img/9+-Years-Exp-UI-Developer.pdf"
+              target="_blank"
+              class="btn btn-primary"
+              >Download CV</a
+            >
           </div>
         </header>
 
@@ -164,7 +169,7 @@
               <div class="section-content">
                 <!-- Personal Information -->
                 <div class="row">
-                  <div class="col-xs-12 col-sm-7">
+                  <div class="col-xs-12 col-sm-12 justifycontent">
                     <p>
                       Innovative Web Developer with over 9 years of Experience
                       Crafting Seamless Digital Experiences, including 2 years
@@ -174,9 +179,71 @@
                       Passionate about UI/UX design, I bring a designer's eye
                       and a developer's skillset to every project.
                     </p>
-                  </div>
+                    <div class="info-list">
+                      <ul>
+                        <li>
+                          <span class="title">ReactJS Specialist :</span>
+                          <span class="value"
+                            >With 2 years of dedicated experience in the React
+                            ecosystem, I have developed a deep understanding of
+                            building robust and scalable single-page
+                            applications (SPAs), leveraging React's
+                            component-based architecture to enhance code
+                            maintainability and reusability.</span
+                          >
+                        </li>
 
-                  <div class="col-xs-12 col-sm-5">
+                        <li>
+                          <span class="title"
+                            >UI/UX Design and Front-End Development :</span
+                          >
+                          <span class="value"
+                            >My extensive background in UI/UX design enables me
+                            to create intuitive and engaging user interfaces,
+                            focusing on responsive web design (RWD) and ensuring
+                            a seamless user experience across devices.
+                            Proficient in using design tools and frameworks like
+                            Material UI and Bootstrap to bring concepts to
+                            life.</span
+                          >
+                        </li>
+
+                        <li>
+                          <span class="title">Technical Expertise :</span>
+                          <span class="value"
+                            >Proficient in HTML5, CSS3, JavaScript, and modern
+                            web development practices. Skilled in using version
+                            control tools like Git for effective collaboration
+                            and code management.</span
+                          >
+                        </li>
+                        <li>
+                          <span class="title"
+                            >End-to-End Project Delivery :</span
+                          >
+                          <span class="value"
+                            >Experienced in full-cycle project management, from
+                            initial concept and design to development,
+                            debugging, and deployment. Committed to delivering
+                            high-quality websites that meet client
+                            specifications and exceed user expectations.</span
+                          >
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="white-space-30"></div>
+                <!-- Services -->
+                <div class="row">
+                  <div class="col-xs-12 col-sm-12">
+                    <div class="block-title">
+                      <h3>Personal <span>Details</span></h3>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-12 col-sm-12">
                     <div class="info-list">
                       <ul>
                         <li>
@@ -388,7 +455,7 @@
                           <h4 class="item-title">
                             Front-End Developer & UI Designer
                           </h4>
-                          <p>APTOnline Limited (Subsidiary of TCS)</p>
+                          <p>APTOnline Limited (Joint Venture of TCS)</p>
                         </div>
                       </div>
 
@@ -526,14 +593,14 @@
                           <a
                             class="filter btn btn-sm btn-link"
                             data-group="category_all"
-                            >All</a
+                            >Complete Portfolio</a
                           >
                         </li>
                         <li>
                           <a
                             class="filter btn btn-sm btn-link"
                             data-group="category_detailed"
-                            >Detailed</a
+                            >Detailed Projects</a
                           >
                         </li>
                         <li>
@@ -546,22 +613,8 @@
                         <li>
                           <a
                             class="filter btn btn-sm btn-link"
-                            data-group="category_soundcloud"
-                            >SoundCloud</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            class="filter btn btn-sm btn-link"
-                            data-group="category_vimeo-videos"
-                            >Vimeo Videos</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            class="filter btn btn-sm btn-link"
-                            data-group="category_youtube-videos"
-                            >YouTube Videos</a
+                            data-group="category_print"
+                            >Print Design</a
                           >
                         </li>
                       </ul>
@@ -569,89 +622,20 @@
                       <!-- Portfolio Grid -->
                       <div class="portfolio-grid three-columns">
                         <figure
-                          class="item lbaudio"
-                          data-groups='["category_all", "category_soundcloud"]'
-                        >
-                          <div class="portfolio-item-img">
-                            <img
-                              src="img/portfolio/1.jpg"
-                              alt="SoundCloud Audio"
-                              title=""
-                            />
-                            <a
-                              href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/221650664&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"
-                              class="lightbox mfp-iframe"
-                              title="SoundCloud Audio"
-                            ></a>
-                          </div>
-
-                          <i class="fa fa-volume-up"></i>
-                          <h4 class="name">SoundCloud Audio</h4>
-                          <span class="category">SoundCloud</span>
-                        </figure>
-
-                        <figure
                           class="item standard"
                           data-groups='["category_all", "category_detailed"]'
                         >
                           <div class="portfolio-item-img">
                             <img
-                              src="img/portfolio/2.jpg"
-                              alt="Media Project 2"
+                              src="img/portfolio/projects/u2.jpg"
+                              alt="Project"
                               title=""
                             />
-                            <a
-                              href="portfolio-1.html"
-                              class="ajax-page-load"
-                            ></a>
+                            <a href="ntrbharosa.html" class="ajax-page-load"></a>
                           </div>
-
                           <i class="far fa-file-alt"></i>
-                          <h4 class="name">Detailed Project 2</h4>
-                          <span class="category">Detailed</span>
-                        </figure>
-
-                        <figure
-                          class="item lbvideo"
-                          data-groups='["category_all", "category_vimeo-videos"]'
-                        >
-                          <div class="portfolio-item-img">
-                            <img
-                              src="img/portfolio/3.jpg"
-                              alt="Vimeo Video 1"
-                              title=""
-                            />
-                            <a
-                              href="https://player.vimeo.com/video/158284739"
-                              class="lightbox mfp-iframe"
-                              title="Vimeo Video 1"
-                            ></a>
-                          </div>
-
-                          <i class="fas fa-video"></i>
-                          <h4 class="name">Vimeo Video 1</h4>
-                          <span class="category">Vimeo Videos</span>
-                        </figure>
-
-                        <figure
-                          class="item standard"
-                          data-groups='["category_all", "category_detailed"]'
-                        >
-                          <div class="portfolio-item-img">
-                            <img
-                              src="img/portfolio/4.jpg"
-                              alt="Media Project 1"
-                              title=""
-                            />
-                            <a
-                              href="portfolio-1.html"
-                              class="ajax-page-load"
-                            ></a>
-                          </div>
-
-                          <i class="far fa-file-alt"></i>
-                          <h4 class="name">Detailed Project 1</h4>
-                          <span class="category">Detailed</span>
+                          <h4 class="name">NTR Bharosa</h4>
+                          <span class="category">Detailed Project</span>
                         </figure>
 
                         <figure
@@ -660,42 +644,99 @@
                         >
                           <div class="portfolio-item-img">
                             <img
-                              src="img/portfolio/5.jpg"
-                              alt="Mockup Design 1"
+                              src="img/portfolio/mockup.jpg"
+                              alt="Mockup1"
                               title=""
                             />
-                            <a
-                              class="lightbox"
-                              title="Mockup Design 1"
-                              href="img/portfolio/full/5.jpg"
-                            ></a>
+                            <a href="mockups.html" class="ajax-page-load"></a>
                           </div>
 
                           <i class="far fa-image"></i>
-                          <h4 class="name">Mockup Design 1</h4>
+                          <h4 class="name">Mockups</h4>
                           <span class="category">Mockups</span>
                         </figure>
 
                         <figure
-                          class="item lbvideo"
-                          data-groups='["category_all", "category_youtube-videos"]'
+                          class="item lbimage"
+                          data-groups='["category_all", "category_mockups"]'
                         >
                           <div class="portfolio-item-img">
                             <img
-                              src="img/portfolio/6.jpg"
-                              alt="YouTube Video 1"
+                              src="img/portfolio/print.jpg"
+                              alt="Print Designs"
                               title=""
                             />
-                            <a
-                              href="https://www.youtube.com/embed/bg0gv2YpIok"
-                              class="lightbox mfp-iframe"
-                              title="YouTube Video 1"
-                            ></a>
+                            <a href="print.html" class="ajax-page-load"></a>
                           </div>
 
-                          <i class="fas fa-video"></i>
-                          <h4 class="name">YouTube Video 1</h4>
-                          <span class="category">YouTube Videos</span>
+                          <i class="far fa-image"></i>
+                          <h4 class="name">Print Designs</h4>
+                          <span class="category">Print Designs</span>
+                        </figure>
+                        <figure
+                          class="item standard"
+                          data-groups='["category_all", "category_detailed"]'
+                        >
+                          <div class="portfolio-item-img">
+                            <img
+                              src="img/portfolio/projects/u1.jpg"
+                              alt="Project"
+                              title=""
+                            />
+                            <a href="aptonline.html" class="ajax-page-load"></a>
+                          </div>
+                          <i class="far fa-file-alt"></i>
+                          <h4 class="name">APTOnline</h4>
+                          <span class="category">Detailed Project</span>
+                        </figure>
+
+                        <figure
+                          class="item standard"
+                          data-groups='["category_all", "category_detailed"]'
+                        >
+                          <div class="portfolio-item-img">
+                            <img
+                              src="img/portfolio/projects/u7.jpg"
+                              alt="Project"
+                              title=""
+                            />
+                            <a href="dalitbandhu.html" class="ajax-page-load"></a>
+                          </div>
+                          <i class="far fa-file-alt"></i>
+                          <h4 class="name">Dalit Bandhu</h4>
+                          <span class="category">Detailed Project</span>
+                        </figure>
+                        <figure
+                          class="item standard"
+                          data-groups='["category_all", "category_detailed"]'
+                        >
+                          <div class="portfolio-item-img">
+                            <img
+                              src="img/portfolio/projects/u3.jpg"
+                              alt="Project"
+                              title=""
+                            />
+                            <a href="apsbcl.html" class="ajax-page-load"></a>
+                          </div>
+                          <i class="far fa-file-alt"></i>
+                          <h4 class="name">APSBCL</h4>
+                          <span class="category">Detailed Project</span>
+                        </figure>
+                        <figure
+                          class="item standard"
+                          data-groups='["category_all", "category_detailed"]'
+                        >
+                          <div class="portfolio-item-img">
+                            <img
+                              src="img/portfolio/projects.jpg"
+                              alt="Project"
+                              title=""
+                            />
+                            <a href="otherprojects.html" class="ajax-page-load"></a>
+                          </div>
+                          <i class="far fa-file-alt"></i>
+                          <h4 class="name">Other Projects</h4>
+                          <span class="category">Detailed Project</span>
                         </figure>
                       </div>
                     </div>
