--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <header id="site_header" class="header mobile-menu-hide">
           <div class="header-content">
             <div class="header-photo">
-              <img src="img/main_photo.jpg" alt="Alex Smith" />
+              <img src="img/main_photo.jpg" alt="Venkata Ranji T" />
             </div>
             <div class="header-titles">
               <h2>Venkata Ranjit T</h2>
