--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <header id="site_header" class="header mobile-menu-hide">
           <div class="header-content">
             <div class="header-photo">
-              <img src="img/main_photo.jpg" alt="Venkata Ranji T" />
+              <img src="img/main_photo.jpg" alt="Alex Smith" />
             </div>
             <div class="header-titles">
               <h2>Venkata Ranjit T</h2>
@@ -62,13 +62,13 @@
             </li>
             <li>
               <a href="#resume" class="nav-anim">
-                <span class="menu-icon lnr lnr-graduation-hat"></span>
+                <span class="menu-icon lnr lnr-briefcase"></span>
                 <span class="link-text">Resume</span>
               </a>
             </li>
             <li>
               <a href="#portfolio" class="nav-anim">
-                <span class="menu-icon lnr lnr-briefcase"></span>
+                <span class="menu-icon lnr lnr-book"></span>
                 <span class="link-text">Portfolio</span>
               </a>
             </li>
@@ -149,7 +149,7 @@
                       <div class="owl-carousel text-rotation">
                         <div class="item">
                           <div class="sp-subtitle">
-                            Front-End Developer & UI/UX Specialist
+                            Front-End Developer / Full Stack Designer
                           </div>
                         </div>
                       </div>
@@ -453,7 +453,7 @@
                         <div class="divider"></div>
                         <div class="right-part">
                           <h4 class="item-title">
-                            Front-End Developer & UI Designer
+                            Front-End Developer & Full Stack Designer
                           </h4>
                           <p>APTOnline Limited (Joint Venture of TCS)</p>
                         </div>
@@ -467,7 +467,7 @@
                         <div class="right-part">
                           <h4 class="item-title">Roopa Soft LLP</h4>
                           <p>
-                            UI Designer and Interactive Application Designer.
+                            Web Designer
                           </p>
                         </div>
                       </div>
@@ -479,20 +479,11 @@
                         <div class="divider"></div>
                         <div class="right-part">
                           <h4 class="item-title">Interactive Data System</h4>
-                          <p>Web Designer</p>
+                          <p>Graphic Designer</p>
                         </div>
                       </div>
 
-                      <div class="timeline-item clearfix">
-                        <div class="left-part">
-                          <h5 class="item-period">2013 - 2014</h5>
-                        </div>
-                        <div class="divider"></div>
-                        <div class="right-part">
-                          <h4 class="item-title">BTS System</h4>
-                          <p>Web Designer</p>
-                        </div>
-                      </div>
+                      
                     </div>
                   </div>
 
@@ -631,7 +622,10 @@
                               alt="Project"
                               title=""
                             />
-                            <a href="ntrbharosa.html" class="ajax-page-load"></a>
+                            <a
+                              href="ntrbharosa.html"
+                              class="ajax-page-load"
+                            ></a>
                           </div>
                           <i class="far fa-file-alt"></i>
                           <h4 class="name">NTR Bharosa</h4>
@@ -700,7 +694,10 @@
                               alt="Project"
                               title=""
                             />
-                            <a href="dalitbandhu.html" class="ajax-page-load"></a>
+                            <a
+                              href="dalitbandhu.html"
+                              class="ajax-page-load"
+                            ></a>
                           </div>
                           <i class="far fa-file-alt"></i>
                           <h4 class="name">Dalit Bandhu</h4>
@@ -732,7 +729,10 @@
                               alt="Project"
                               title=""
                             />
-                            <a href="otherprojects.html" class="ajax-page-load"></a>
+                            <a
+                              href="otherprojects.html"
+                              class="ajax-page-load"
+                            ></a>
                           </div>
                           <i class="far fa-file-alt"></i>
                           <h4 class="name">Other Projects</h4>
@@ -913,8 +913,8 @@
     <script src="js/jquery.magnific-popup.min.js"></script>
 
     <script src="js/validator.js"></script>
-    <script src="js/main.js"></script>
 
+    <script src="js/main.js"></script>
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
