additional qualifications added

--- a/index.html
+++ b/index.html
@@ -367,6 +367,36 @@
                 </div>
                 <!-- End of Services -->
 
+                <!-- End of Services -->
+                <div class="white-space-30"></div>
+                <!-- Services -->
+                <div class="row">
+                  <div class="col-xs-12 col-sm-12">
+                    <div class="block-title">
+                      <h3>Additional <span>Qualifications</span></h3>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-xs-12 col-sm-12">
+                    <div class="info-list">
+                      <ul>
+                        <li>
+                          <span class="title">Drawing :</span>
+                          <span class="value">Lower, Higher & T.T.C</span>
+                        </li>
+
+                        <li>
+                          <span class="title">Hindi :</span>
+                          <span class="value">Praveshika</span>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <!-- End of Services -->
+
                 <div class="white-space-30"></div>
               </div>
             </section>
@@ -466,9 +496,7 @@
                         <div class="divider"></div>
                         <div class="right-part">
                           <h4 class="item-title">Roopa Soft LLP</h4>
-                          <p>
-                            Web Designer
-                          </p>
+                          <p>Web Designer</p>
                         </div>
                       </div>
 
@@ -482,8 +510,6 @@
                           <p>Graphic Designer</p>
                         </div>
                       </div>
-
-                      
                     </div>
                   </div>
 
