--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
           <div class="header-buttons">
             <a
-              href="./img/9+-Years-Exp-UI-Developer.pdf"
+              href="./img/9+ Years Exp Full Stack Designer.pdf"
               target="_blank"
               class="btn btn-primary"
               >Download CV</a
@@ -171,13 +171,19 @@
                 <div class="row">
                   <div class="col-xs-12 col-sm-12 justifycontent">
                     <p>
-                      Innovative Web Developer with over 9 years of Experience
-                      Crafting Seamless Digital Experiences, including 2 years
-                      of specialized work with React. Specializing in HTML5,
-                      CSS3, JavaScript, and the React ecosystem, I transform
-                      ideas into visually stunning, user-friendly websites.
-                      Passionate about UI/UX design, I bring a designer's eye
-                      and a developer's skillset to every project.
+                      "Innovative Front-End Developer with over 9 years of
+                      experience crafting seamless digital experiences,
+                      including 2 years of specialized work with React and
+                      Redux. Specializing in HTML5, CSS3, JavaScript, and the
+                      React ecosystem, I transform ideas into visually stunning,
+                      user-friendly websites. With expertise in React, I create
+                      reusable components that enhance efficiency and
+                      scalability, while leveraging Redux for robust state
+                      management across complex applications. Passionate about
+                      UI/UX design, I combine a designer’s creativity with a
+                      developer’s technical acumen to build responsive, dynamic
+                      web solutions that prioritize both performance and
+                      aesthetics."
                     </p>
                     <div class="info-list">
                       <ul>
@@ -190,6 +196,22 @@
                             applications (SPAs), leveraging React's
                             component-based architecture to enhance code
                             maintainability and reusability.</span
+                          >
+                        </li>
+                        <li>
+                          <span class="title"
+                            >Redux for State Management :</span
+                          >
+                          <span class="value"
+                            >I efficiently manage state across complex and
+                            large-scale projects. By leveraging Redux's
+                            centralized state management, I ensure consistent
+                            and predictable application behavior, making it
+                            easier to debug, test, and scale applications. My
+                            expertise in Redux allows me to handle asynchronous
+                            actions, manage global states, and optimize app
+                            performance, enhancing the overall user
+                            experience."</span
                           >
                         </li>
 
@@ -395,6 +417,30 @@
                     </div>
                   </div>
                 </div>
+
+                <!-- End of Services -->
+                <div class="white-space-30"></div>
+                <!-- Services -->
+                <div class="row">
+                  <div class="col-xs-12 col-sm-12">
+                    <div class="block-title">
+                      <h3>Languages <span>Known</span></h3>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-xs-12 col-sm-12">
+                    <div class="info-list">
+                      <ul>
+                        <li>
+                          <span class="value">English, Hindi, Telugu</span>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
                 <!-- End of Services -->
 
                 <div class="white-space-30"></div>
@@ -533,11 +579,21 @@
                     <!-- End of Knowledges -->
                     <div class="white-space-20"></div>
                     <div class="block-title block-titlem0">
+                      <h4>State Management</h4>
+                    </div>
+
+                    <ul class="knowledges">
+                      <li>Redux</li>
+                      <li>Redux Toolkit</li>
+                    </ul>
+                    <div class="white-space-20"></div>
+                    <div class="block-title block-titlem0">
                       <h4>UI Frameworks</h4>
                     </div>
 
                     <ul class="knowledges">
                       <li>Bootstrap 5</li>
+                      <li>React Bootstrap</li>
                       <li>Material UI</li>
                       <li>Tailwind CSS</li>
                     </ul>
@@ -570,6 +626,7 @@
 
                     <ul class="knowledges">
                       <li>Figma</li>
+                      <li>FigJam (Wireframes)</li>
                       <li>Adobe XD</li>
                       <li>Photoshop</li>
                       <li>Illustrator</li>
@@ -785,14 +842,14 @@
                   <div class="col-xs-12 col-sm-4">
                     <div class="lm-info-block gray-default">
                       <i class="lnr lnr-map-marker"></i>
-                      <h4>Hyderabad, BHEL, New MIG</h4>
+                      <h4>New Mig, BHEL, Hyderabad, Telangana - 502032</h4>
                       <span class="lm-info-block-value"></span>
                       <span class="lm-info-block-text"></span>
                     </div>
 
                     <div class="lm-info-block gray-default">
                       <i class="lnr lnr-phone-handset"></i>
-                      <h4>+91 9966189948</h4>
+                      <h4>+91 99661 89948</h4>
                       <span class="lm-info-block-value"></span>
                       <span class="lm-info-block-text"></span>
                     </div>
