--- a/mockups.html
+++ b/mockups.html
@@ -72,6 +72,9 @@
           <div class="item">
             <img src="img/portfolio/mockups/m19.jpg" alt="" />
           </div>
+          <div class="item">
+            <img src="img/portfolio/mockups/m20.jpg" alt="" />
+          </div>
         </div>
 
         <script type="text/javascript">
