--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
           <div class="header-buttons">
             <a
-              href="./img/9+ Years Exp Full Stack Designer.pdf"
+              href="./img/10+-Years-Exp-Full-Stack-Designer.pdf"
               target="_blank"
               class="btn btn-primary"
               >Download CV</a
@@ -171,13 +171,13 @@
                 <div class="row">
                   <div class="col-xs-12 col-sm-12 justifycontent">
                     <p>
-                      "Innovative Front-End Developer with over 9 years of
+                      "Innovative Front-End Developer with over 10 years of
                       experience crafting seamless digital experiences,
-                      including 2 years of specialized work with React and
-                      Redux. Specializing in HTML5, CSS3, JavaScript, and the
-                      React ecosystem, I transform ideas into visually stunning,
-                      user-friendly websites. With expertise in React, I create
-                      reusable components that enhance efficiency and
+                      including 3 years of specialized work with React, Next.js
+                      and Redux. Specializing in HTML5, CSS3, JavaScript, and
+                      the React ecosystem, I transform ideas into visually
+                      stunning, user-friendly websites. With expertise in React,
+                      I create reusable components that enhance efficiency and
                       scalability, while leveraging Redux for robust state
                       management across complex applications. Passionate about
                       UI/UX design, I combine a designer’s creativity with a
@@ -190,7 +190,7 @@
                         <li>
                           <span class="title">ReactJS Specialist :</span>
                           <span class="value"
-                            >With 2 years of dedicated experience in the React
+                            >With 3 years of dedicated experience in the React
                             ecosystem, I have developed a deep understanding of
                             building robust and scalable single-page
                             applications (SPAs), leveraging React's
@@ -574,6 +574,7 @@
                       <li>CSS 3</li>
                       <li>Java Script</li>
                       <li>React</li>
+                      <li>Next.js</li>
                       <li>jquery</li>
                     </ul>
                     <!-- End of Knowledges -->
