--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                     <ul class="knowledges">
                       <li>Responsive Web Design</li>
                       <li>Mobile App Design</li>
-                      <li>Cross-Browser Compatibility XD</li>
+                      <li>Cross-Browser Compatibility</li>
                       <li>API Integration</li>
                     </ul>
                   </div>
