--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
           <div class="header-buttons">
             <a
-              href="./img/10+-Years-Exp-Full-Stack-Designer.pdf"
+              href="./resume/resume.pdf"
               target="_blank"
               class="btn btn-primary"
               >Download CV</a
