privacy policy updated

--- a/index.html
+++ b/index.html
@@ -1355,10 +1355,10 @@
                       <ul>
                         <li>
                           <span class="value"
-                            >This website is owned and operated by [Your Full
-                            Name]. I respect your privacy and am committed to
-                            protecting any personal information you share with
-                            me.</span
+                            >This website is owned and operated by Venkata
+                            Ranjit Tholupuluri. I respect your privacy and am
+                            committed to protecting any personal information you
+                            share with me.</span
                           >
                         </li>
                         <li>
