hire me content added

--- a/index.html
+++ b/index.html
@@ -916,41 +916,54 @@
               <div class="page-title">
                 <h2>Hire <span>Me</span></h2>
               </div>
+              <div class="info-list">
+                <ul>
+                  <li>
+                    Hi, I'm <b>Ranjit</b> – a passionate Front-End Developer and
+                    UI Designer with a strong eye for detail and creativity.
+                  </li>
+                  <li>
+                    I specialize in building
+                    <b>responsive, user-friendly websites</b> using
+                    <b>HTML5, CSS3, JavaScript, React,</b> and
+                    <b>modern UI frameworks like Bootstrap, Tailwind CSS,</b>
+                    and
+                    <b>Material UI.</b>
+                  </li>
 
+                  <li>
+                    As a designer, I also work with tools like
+                    <b>Photoshop, Figma, Adobe XD,</b> and <b>Illustrator</b> to
+                    craft clean and engaging interfaces. Whether you need a
+                    pixel-perfect web app or a stunning UI/UX concept, I bring
+                    both design aesthetics and development expertise to the
+                    table.
+                  </li>
+
+                  <li>
+                    Let's collaborate on your next idea and turn it into a
+                    visually stunning and high-performing digital product.
+                  </li>
+                </ul>
+                <div class="white-space-30"></div>
+                <div class="block-title">
+                  <h3>What I Offer:</h3>
+                </div>
+                <ul class="new-style">
+                  <li>
+                    Responsive website development (HTML, CSS, JavaScript,
+                    React)
+                  </li>
+                  <li>UI/UX design (Figma, Photoshop, Adobe XD)</li>
+                  <li>Web design mockups & prototypes</li>
+                  <li>Landing pages, portfolios, dashboards</li>
+                  <li>Pixel-perfect front-end implementation</li>
+                  <li>API Integration</li>
+                </ul>
+              </div>
               <div class="section-content">
+                <!-- Contact Form -->
                 <div class="row">
-                  <!-- Contact Info -->
-                  <div class="col-xs-12 col-sm-4">
-                    <div class="lm-info-block gray-default">
-                      <h4>
-                        <a href="#terms-conditions" class="nav-anim"
-                          >Terms and conditions</a
-                        >
-                      </h4>
-                    </div>
-                  </div>
-                  <div class="col-xs-12 col-sm-4">
-                    <div class="lm-info-block gray-default">
-                      <h4>
-                        <a href="#privacy-policy" class="nav-anim"
-                          >Privacy Policy</a
-                        >
-                      </h4>
-                    </div>
-                  </div>
-                  <div class="col-xs-12 col-sm-4">
-                    <div class="lm-info-block gray-default">
-                      <h4>
-                        <a href="#cancellations-refunds" class="nav-anim"
-                          >Cancellations & Refunds
-                        </a>
-                      </h4>
-                    </div>
-                  </div>
-
-                  <!-- End of Contact Info -->
-
-                  <!-- Contact Form -->
                   <div class="col-xs-12 col-sm-12">
                     <div class="block-title">
                       <br />
@@ -1060,6 +1073,37 @@
                     </form>
                   </div>
                   <!-- End of Contact Form -->
+                </div>
+                <div class="white-space-30"></div>
+                <div class="row">
+                  <!-- Contact Info -->
+                  <div class="col-xs-12 col-sm-4">
+                    <div class="lm-info-block gray-default">
+                      <h4>
+                        <a href="#terms-conditions" class="nav-anim"
+                          >Terms and conditions</a
+                        >
+                      </h4>
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-4">
+                    <div class="lm-info-block gray-default">
+                      <h4>
+                        <a href="#privacy-policy" class="nav-anim"
+                          >Privacy Policy</a
+                        >
+                      </h4>
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-4">
+                    <div class="lm-info-block gray-default">
+                      <h4>
+                        <a href="#cancellations-refunds" class="nav-anim"
+                          >Cancellations & Refunds
+                        </a>
+                      </h4>
+                    </div>
+                  </div>
                 </div>
               </div>
             </section>
